[package]
name = "oxygen18-backend"
version = "0.1.0"
authors = ["Tiffany Bennett <tiffnixen@gmail.com>"]

[dependencies]
atom_syndication = "0.5"
chrono = "0.4"
websocket = "0.20.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
reqwest = "0.8.7"

[dependencies.rusqlite]
version = "0.13.0"
features = [ "bundled" ]

[dependencies.rss]
version = "1.5.0"
features = [ "from_url" ]